2008-02-26  John W. Eaton  <jwe@octave.org>

	* oct-rand.cc (unknown_dist): New dist type.
	(uniform_dist, normal_dist, expon_dist, poisson_dist, gamma_dist):
	Use static const int instead of #define.
	(get_dist_id): Default retval is unknown_dist.

	* oct-rand.cc (rand_states): New static variable.
	(initialize_rand_states, get_dist_id, get_internal_state,
	set_internal_state, switch_to_generator, save_state): New functions.
	(octave_rand::state): New arg to specify distribution.
	Save state in rand_states instead of setting internal state.
	Return named state.  Use set_internal_state to generate proper
	state vector from user supplied state.  Save and restore current
	state if specified and current distributions are different.
	(octave_rand::distribution (void)): Use switch rather than if/else.
	(octave_rand::distribution (const std::string&)): Likewise.
	(octave_rand::uniform_distribution,
	octave_rand::normal_distribution,
	octave_rand::exponential_distribution,
	octave_rand::poisson_distribution,
	octave_rand::gamma_distribution): Call switch_to_generator.
	(octave_rand::state, maybe_initialize): For new_generators, just
	call initialize_rand_states if not already initialized.
	(octave_rand::scalar, fill_rand): Save state after generating value.

	* dMatrix.cc (Matrix::lssolve): Avoid another dgelsd lwork query bug.
	* CMatrix.cc (ComplexMatrix::lssolve): Likewise, for zgelsd

2008-02-24  John W. Eaton  <jwe@octave.org>

	* oct-inttypes.h (octave_int_helper): New class.  Provide
	specializations for signed and unsigned types.
	(octave_int<T>::operator >>=, octave_int<T>::abs,
	octave_int<T>::signum): Use static functions from
	octave_int_helper class.

	* oct-inttypes.h, oct-inttypes.cc (OCTAVE_US_TYPE1_CMP_OP,
	OCTAVE_US_TYPE2_CMP_OP): Tag function declarations and definitions
	with "template <>".

2008-02-22  John W. Eaton  <jwe@octave.org>

	* CSparse.cc, SparseCmplxLU.cc, SparsedbleLU.cc, dSparse.cc,